# mutiagent

./: .dockerignore  .env.production  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.yml  nginx.conf  task-1-report.md
backend/: .dockerignore  .env.example  Dockerfile  OneTreeRuntime.spec  alembic.ini  fix_db.py  pyproject.toml  scratch_test_animation_generation.py  scratch_test_llm_generation.py  scratch_test_llm_generation_full.py  test_dify_chat.py  test_dify_orchestration.py  test_dify_upload_e2e.py  test_dify_upload_e2e_simple.py  test_format_query.py  test_llm.py  test_route.py  test_upload.py
backend/app/: __init__.py  database.py  desktop.py  desktop_runtime.py  export_openapi.py  main.py  migration_cli.py  migration_state.py  models.py  schema_upgrades.py  schemas.py
backend/migrations/: env.py
backend/tests/: conftest.py  postgres.py  test_admin_account_api.py  test_agent_contract_models.py  test_agent_conversation_service.py  test_agent_executor.py  test_agent_plan.py  test_agent_prompt_contracts.py  test_alembic_migrations.py  test_auth_api.py  test_branch_api.py  test_canopy_api.py  test_conversation_session_service.py  test_cors_api.py  test_course_knowledge_agent_contract.py  test_course_knowledge_published_source_only.py  test_course_resource_agent_contract.py  test_cultivation_program_api.py  test_desktop_app.py  test_desktop_runtime.py  test_document_parser.py  test_forest_api.py  test_health_api.py  test_hybrid_search.py  test_kb_models.py  test_knowledge_base_api.py  test_knowledge_base_fixtures.py  test_knowledge_base_ingestion_job.py  test_knowledge_base_lifecycle.py  test_knowledge_base_service.py  test_knowledge_base_textbook_lifecycle.py  (+30 more)
(+416 files in other folders)
