[project]
name = "mutiagent-backend"
version = "0.1.0"
description = "Mock auth backend for the mutiagent monorepo."
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=5.0.0",
  "fastapi>=0.115.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "psycopg2-binary>=2.9.0",
  "langgraph>=1.2.2",
  "python-dotenv>=1.2.2",
  "python-jose[cryptography]>=3.5.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
