[project]
name = "mutiagent-backend"
version = "0.1.0"
description = "Mock auth backend for the mutiagent monorepo."
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=5.0.0",
  "dashscope==1.26.2",
  "fastapi>=0.115.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "psycopg2-binary>=2.9.0",
  "langgraph>=1.2.2",
  "python-dotenv>=1.2.2",
  "python-jose[cryptography]>=3.5.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.32",
  "markitdown[docx,pdf]>=0.1.6",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes (unused imports/variables etc)
    "I",    # isort (import sorting)
    "C90",  # mccabe complexity
]
fixable = ["ALL"]
unfixable = []
